deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask-container
          image: eliya12345/flask-app
          ports:
            - containerPort: 5000

          volumeMounts:
            - name: flask-storage
              mountPath: /data

      volumes:
        - name: flask-storage
          persistentVolumeClaim:
            claimName: flask-pvc
